--- a/Croatian/main/Notes.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Notes.apk/res/values-hr/strings.xml
@@ -247,6 +247,8 @@
   <string name="complete_polish">Završeno poliranje</string>
   <string name="content_text">Pisanje pomoću umjetne inteligencije pruža značajke uključujući proširenje, poliranje, lekturu i sažimanje vašeg teksta i stvaranje dijelova teksta na temelju vaših upita.</string>
   <string name="cloud_trash_bin_title">Izbriši bilješke u Xiaomi Cloudu</string>
+  <string name="color_pick_board_talkback">Tabela boja</string>
+  <string name="color_pick_talkback">Redak %1$d, stupac %2$d</string>
   <string name="confirm_cancel">"Ne prihvaćam"</string>
   <string name="confirm_ok">Prihvaćam</string>
   <string name="continuous_default_hint">Kopirajte tekst, spremajte slike i snimke zaslona kao isječke</string>
@@ -331,7 +333,23 @@
   <string name="doodle_brush_markpen">Marker</string>
   <string name="doodle_brush_pen">Olovka</string>
   <string name="doodle_brush_pencil">Kemijska</string>
-  <string name="doodle_brush_watercolor">Flomaster</string>
+  <string name="doodle_brush_watercolor">Marker</string>
+  <string name="doodle_color_pick_black_talkback">Crna</string>
+  <string name="doodle_color_pick_blue_talkback">Plava</string>
+  <string name="doodle_color_pick_green_blue_talkback">Plavo-zelena</string>
+  <string name="doodle_color_pick_green_talkback">Zelena</string>
+  <string name="doodle_color_pick_item_description">Dubina boje: %1$d</string>
+  <string name="doodle_color_pick_light_blue_talkback">Svijetloplava</string>
+  <string name="doodle_color_pick_orange_red_talkback">Narančasto-crvena</string>
+  <string name="doodle_color_pick_orange_talkback">Narančasta</string>
+  <string name="doodle_color_pick_orange_yellow_talkback">Narančasto-žuta</string>
+  <string name="doodle_color_pick_pink_talkback">Ružičasta</string>
+  <string name="doodle_color_pick_purple_talkback">Ljubičasta</string>
+  <string name="doodle_color_pick_red_talkback">Crvena</string>
+  <string name="doodle_color_pick_talkback">Odabrana boja: %1$s</string>
+  <string name="doodle_color_pick_unknown_talkback">Nepoznata boja</string>
+  <string name="doodle_color_pick_yellow_green_talkback">Žuto-zeleno</string>
+  <string name="doodle_color_pick_yellow_talkback">Žuta</string>
   <string name="doodle_feature">Doodles</string>
   <string name="doodle_guide_brush_config_hint">Ponovno dodirnite za podešavanje širine poteza i neprozirnosti</string>
   <string name="doodle_guide_dialog_confirm">U redu</string>
@@ -585,6 +603,11 @@ Dodirnite + da napravite mapu"</string>
   <string name="miui_plus_relay_waring_data_not_find">"Nije moguće pronaći stavku koju gledate na drugom uređaju. Provjerite jesu li sve stavke sinkronizirane."</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -606,13 +629,16 @@ Dodirnite + da napravite mapu"</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
-  <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_item_view_accessibility_unselected">Nije odabrano</string>
   <string name="miuix_item_view_role_description">Kartica</string>
   <string name="miuix_navigator_category_group_collapse">Sažmi</string>
+  <string name="miuix_navigator_category_group_collapsed">Zatvoreno</string>
   <string name="miuix_navigator_category_group_expand">Proširi</string>
+  <string name="miuix_navigator_category_group_expanded">Prošireno</string>
   <string name="miuix_navigator_content_switch_description">Prikaži bočnu traku</string>
   <string name="miuix_navigator_multiple_choice">Odaberi</string>
   <string name="miuix_navigator_navigator_switch_description">Sakrij bočnu traku</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -621,6 +647,8 @@ Dodirnite + da napravite mapu"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_stretchablewidget_collapsed">Zatvoreno</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
@@ -856,7 +884,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="pref_title_font_size">Veličina fonta</string>
   <string name="pref_title_note_style">Stil</string>
   <string name="pref_title_quick_note">Brze bilješke</string>
-  <string name="pref_title_quick_note_talkback">Brze bilješke, dvaput kliknite i kliznite udesno za ulazak na stranicu s brzim bilješkama</string>
+  <string name="pref_title_quick_note_talkback">Da biste brzo otvorili bilješke, dodirnite dvaput i držite zatim povucite udesno.</string>
   <string name="pref_title_recover_help">Obnovi bilješke</string>
   <string name="pref_title_show_root_folder_in_homepage">Prikaži samo brze bilješke na početnoj stranici</string>
   <string name="pref_title_skip_confirm_for_quick_delete">Izbrišite pomoću gesta</string>
@@ -964,6 +992,10 @@ Dodirnite + da napravite mapu"</string>
   <string name="sina_share_success">Poslano</string>
   <string name="sina_token_expired_warning">Weibo račun je istekao, dodajte račun ponovno.</string>
   <string name="sina_token_invalid_warning">Weibo račun je nevažeći, dodajte račun ponovno.</string>
+  <string name="setting_show_grid_talkback">Mreža</string>
+  <string name="setting_show_line_talkback">Postrojeno</string>
+  <string name="setting_show_solid_talkback">Običan</string>
+  <string name="shortcut_key_description">Tipka najbliža vrhu olovke je za pisanje. Pritisnite za promjenu kista, pritisnite i držite za prebacivanje na gumicu, a zatim pritisnite i držite za brisanje. Srednja tipka je za snimanje zaslona. Pritisnite za prebacivanje na posljednju korištenu boju.</string>
   <string name="single_link_excerpt_saving">Spremanje stavki…</string>
   <string name="single_link_excerpt_summary_saving">Generiranje popisa sažetaka.</string>
   <string name="single_link_pic_excerpt_summary_saving">Generiranje sažetka slike u tijeku</string>
@@ -1151,6 +1183,7 @@ Dopustite aplikaciji Bilješke snimanje zvuka."</string>
   <string name="todo_user_guide_tip6">Dodirnite \"Enter\" za izradu kontrolnog popisa podzadataka</string>
   <string name="todoalert_done">U redu</string>
   <string name="tomorrow">Sutra</string>
+  <string name="tool_back_talkback">Natrag</string>
   <string name="toolbar_check_description">Dodaj potvrdni okvir</string>
   <string name="toolbar_delete_description">Izbriši ovu bilješku</string>
   <string name="toolbar_done_description">Gotovo</string>
