--- a/Croatian/main/SecurityCenter.apk/res/values-hr/strings.xml
+++ b/Croatian/main/SecurityCenter.apk/res/values-hr/strings.xml
@@ -1559,7 +1559,7 @@ Međutim, neke od vaših transakcija još nisu dovršene. Da biste mogli povući
   <string name="config_restrict_running_warning">Ako nastavite, sve pozadinske aktivnosti aplikacije bit će zaustavljene, što može utjecati na njezine značajke. Svejedno nastaviti?</string>
   <string name="confirmSecondSpacePassword">Potvrdite zaporku Drugog prostora</string>
   <string name="confirm_ai_allow_all_permission">Želite li promijeniti status dopuštenja u \"Odluči umjesto mene\" za sve aplikacije?</string>
-  <string name="confirm_allow_all_permission">Želite li dopustiti svim aplikacijama upotrebu ove značajke?</string>
+  <string name="confirm_allow_all_permission">Želite li dopustiti svim aplikacijama korištenje ovog dopuštenja?</string>
   <string name="confirm_bind_xiaomi_account_dialog_title">Dodavanje Xiaomi računa</string>
   <string name="confirm_close">Isključi</string>
   <string name="confirm_fingerprint_msg">Stavite prst na senzor</string>
@@ -2619,6 +2619,7 @@ Kad je uključena pametna brzina sličica u sekundi, alati za otkrivanje brzine 
   <string name="game_toolbox_fps_shake">Trhtanje %d FPS</string>
   <string name="game_toolbox_immersion_sound_desc">Kada koristite slušalice, precizno uhvatite zvučne efekte poput koraka i glasova, poboljšavajući uranjanje u igru</string>
   <string name="game_toolbox_immersion_sound_title">Imerzivni zvuk</string>
+  <string name="game_toolbox_item_joystick_key_mapping">Tipka kontrolera</string>
   <string name="game_toolbox_margin_restrain_description">Postavite raspon odbijanja dodira kako biste smanjili slučajne dodire</string>
   <string name="game_toolbox_mem_clean_desc">Očisti memoriju i povećaj brzinu</string>
   <string name="game_toolbox_more_tools_title">Više alata</string>
@@ -3830,7 +3831,7 @@ Vaš je uređaj sad %s brži."</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
   <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
-  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđite u način uređivanja</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -3850,17 +3851,17 @@ Vaš je uređaj sad %s brži."</string>
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Pomaknite se prema dolje za zatvaranje</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Pomaknite se prema dolje do pola zaslona</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Pomaknite se prema dolje do minimiziranog</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Pomakni se do pola zaslona</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Pomičite se gore do maksimiziranja</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Povucite prema dolje za zatvaranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Povucite prstom prema dolje za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Povucite prema dolje za minimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Povucite prstom prema gore za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Povucite prstom prema gore za maksimiziranje</string>
   <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
   <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
   <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
-  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebačen na pola zaslona</string>
-  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Prebačeno na maksimizirano</string>
-  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Prebačeno na minimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebaci na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Maksimiziraj</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Minimiziraj</string>
   <string name="miuix_indexer_collect">Zbirke</string>
   <string name="miuix_indexer_selected">Odabrano %s</string>
   <string name="miuix_progressbar_loading">Samo trenutak…</string>
