--- a/Croatian/main/ThemeManager.apk/res/values-hr/strings.xml
+++ b/Croatian/main/ThemeManager.apk/res/values-hr/strings.xml
@@ -105,8 +105,8 @@ Teme će otkriti koje aplikacije koristite i prikazivati transparentne pozadine 
   <string name="ai_generate_title">Izraditi dinamičku pozadinu?</string>
   <string name="ai_generate_verify_text">Provjera sadržaja slike…</string>
   <string name="ai_generate_waiting">Poslužitelj je zauzet. Pričekajte minutu ili dvije i pokušajte ponovno.</string>
-  <string name="ai_generate_wallpaper_done">Uspješno izrađena AI dinamička pozadina</string>
-  <string name="ai_generate_wallpaper_fail">"Nije moguće izraditi AI dinamičku pozadinu"</string>
+  <string name="ai_generate_wallpaper_done">Pozadina uspješno generirana</string>
+  <string name="ai_generate_wallpaper_fail">"Nije moguće generirati pozadinu"</string>
   <string name="ai_generate_wallpaper_fail_message">Fotografije koje ste odabrali možda su prekršile naše smjernice. Odaberitete nove fotografije.</string>
   <string name="ai_generating">Izrada…</string>
   <string name="ai_generating_loading">Izrada</string>
@@ -1189,8 +1189,8 @@ mm"</string>
   <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
-  <string name="miuix_appcompat_accessibility_new_message">Nova poruka</string>
-  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Pokreni način rada za uređivanje</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberite sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberite stavke</string>
@@ -1207,17 +1207,17 @@ mm"</string>
   <string name="miuix_appcompat_select_all_description">Odaberite sve</string>
   <string name="miuix_appcompat_select_item">Odaberite stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Pomaknite se prema dolje za zatvaranje</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Pomaknite se prema dolje do pola zaslona</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Pomaknite se prema dolje do minimiziranog</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Pomaknite se do pola zaslona</string>
-  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Pomičite se gore do maksimiziranja</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Povucite prema dolje za zatvaranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Povucite prstom prema dolje za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Povucite prema dolje za minimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Povucite prstom prema gore za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Povucite prstom prema gore za maksimiziranje</string>
   <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
   <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
   <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
-  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebačeno na pola zaslona</string>
-  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Prebačeno na maksimizirano</string>
-  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Prebačeno na minimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebaci na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Maksimiziraj</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Minimiziraj</string>
   <string name="miuix_compat_contact">Kontakti</string>
   <string name="miuix_compat_dialog_button">Razumijem</string>
   <string name="miuix_compat_dialog_cancel">Odustani</string>
