--- a/Croatian/main/MiGalleryLockscreen.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiGalleryLockscreen.apk/res/values-hr/strings.xml
@@ -452,17 +452,17 @@ mm"</string>
    <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
    <string name="miuix_appcompat_select_item">Odaberi stavke</string>
    <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
-   <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Pomaknite se prema dolje za zatvaranje</string>
-   <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Pomaknite se prema dolje do pola zaslona</string>
-   <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Pomaknite se prema dolje do minimiziranog</string>
-   <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Pomakni se do pola zaslona</string>
-   <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Pomičite se gore do maksimiziranja</string>
+   <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Povucite prema dolje za zatvaranje</string>
+   <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Povucite prstom prema dolje za prebacivanje na pola zaslona</string>
+   <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Povucite prema dolje za minimiziranje</string>
+   <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Povucite prstom prema gore za prebacivanje na pola zaslona</string>
+   <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Povucite prstom prema gore za maksimiziranje</string>
    <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
    <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
    <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
-   <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebačen na pola zaslona</string>
-   <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Prebačeno na maksimizirano</string>
-   <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Prebačeno na minimizirano</string>
+   <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebaci na pola zaslona</string>
+   <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Maksimiziraj</string>
+   <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Minimiziraj</string>
    <string name="miuix_indexer_collect">Zbirke</string>
    <string name="miuix_indexer_selected">Odabrano %s</string>
    <string name="miuix_popup_window_default_title">Skočni prozor</string>
